@@ -29,6 +29,8 @@
 #include <stdlib.h>
 #include <errno.h>
 #include <locale.h>
+#include <sys/types.h>
+#include <sys/stat.h>
 
 typedef enum {
   LOAD_SCHEMA_FILE,
@@ -887,7 +889,10 @@ main (int argc, char** argv)
   if (makefile_install_mode)
     {
       const gchar** args = poptGetArgs(ctx);
-      gint retval = do_makefile_install (conf, args, FALSE);
+      gint retval;
+
+      umask (022);
+      retval = do_makefile_install (conf, args, FALSE);
       
       gconf_engine_unref (conf);
 
@@ -897,7 +902,10 @@ main (int argc, char** argv)
   if (makefile_uninstall_mode)
     {
       const gchar** args = poptGetArgs(ctx);
-      gint retval = do_makefile_install (conf, args, TRUE);
+      gint retval;
+
+      umask (022);
+      retval = do_makefile_install (conf, args, TRUE);
       
       gconf_engine_unref (conf);
 
