@@ -1,3 +1,9 @@
+2004-08-10  Mark McLoughlin  <mark@skynet.ie>
+
+	* gconf/gconftool.c: (main): set the umask for
+	--makefile-install-mode	so we always install the
+	schemas with the correct permissions. bug #145041.
+
 2004-08-07  Danilo Šegan  <dsegan@gmx.net>
 
 	Fixes bug #149518.
